# serde-piecewise-default

./: .travis.yml  Cargo.toml  LICENSE  README.md
serde_piecewise_default_derive/: Cargo.toml
serde_piecewise_default_derive/src/: lib.rs
src/: lib.rs
tests/: compiletest.rs  named_fields.rs
tests/compile-fail/: no_default.rs  unnamed_fields.rs
