[package]
name = "serde_piecewise_default_derive"
version = "0.2.0"
authors = ["Melody Horn <melody@boringcactus.com>"]
edition = "2018"

description = "Uses serde's Option<T> handling to let you easily specify defaults for all fields at once by implementing Default."
documentation = "https://docs.rs/serde_piecewise_default/"
repository = "https://github.com/boringcactus/serde-piecewise-default"

keywords = ["serde", "serialization", "derive"]
categories = ["encoding"]

license = "MIT"

[badges]
travis-ci = { repository = "boringcactus/serde-piecewise-default", branch = "master" }
maintenance = { status = "passively-maintained" }

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15.35", features = ["extra-traits"] }
quote = "0.6.12"
proc-macro2 = "0.4.30"
serde = { version = "1.0", features = ["derive"] }
